src/deardiary_assets/assets/styles.css
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
}

html {
  font-family: "Montserrat", sans-serif;
}

body {
  background: #D9D6D2;
  color: #3E3E40;
  font-family: 'Open Sans', sans-serif;
}

.landing-page-background-image {
  width: 100%;
  height: 100%;
  position: absolute;
  opacity: 0.3;
}

div:focus,
input:focus,
textarea:focus,
select:focus {
  outline: none;
}

a {
  text-decoration: none;
  color: #8C8C8C;
}

textarea {
  resize: none;
  box-sizing: border-box;
  width: 100%;
  height: 90%;
  border: none;
  background: none;
}

label {
  cursor: pointer;
  position: absolute;
}

#inputTag {
  display: none;
}

.label,
.nft-price {
  border: none;
  background: transparent;
  padding: 0;
  margin: 0;
  font-size: 1.1em;
  font-weight: bold;
  font-family: 'Open Sans', sans-serif;
}

.nft-price {
  font-weight: 300;
  font-size: 16px;
  width: 100%;
}

.nft-price-container,
.nft-listed-price-container {
  width: 100%;
  display: flex;
  align-items: center;
  line-height: 18px;
}

.nft-listed-price-container {
  color: #5bc0de;
  border: solid 1px #5bc0de;
  text-align: center;
}

header {
  height: 60px;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  background: #D9D6D2;
  z-index: 100;
  display: block;
}

.landing-page-wrapper {
  display: flex;
  flex-direction: column;
  min-height: 100vh;
}

.landing-page-container {
  flex: 1;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  padding: 20px 0;
}

.header-title {
  font-weight: 300;
  margin: 0 6%;
  line-height: 60px;
  color: #8C8C8C;
  font-family: 'Dancing Script', cursive;
  display: flex;
  justify-content: space-between;
}

.right-side-header {
  display: flex;
  font-family: 'Open Sans', sans-serif;
  font-size: 16px;
}

.header-background,
.landing-page-links {
  background: #D9D6D2;
}

.header-line {
  position: absolute;
  width: 100%;
  top: 36px;
  border-bottom: solid 1px #8C8C8C;
  z-index: -1;
}

.landing-page-image-container {
  width: 100%;
  height: 100%;
}

.landing-page-header-box {
  width: min(850px, 92vw);
  height: 470px;
  border-radius: 25px;
  z-index: -1;
  display: flex;
  align-items: center;
  box-shadow: 0px 2px 20px 0 rgba(0, 0, 0, 0.18);
}

.clouds-image {
  opacity: 0.3;
  border-radius: 25px;
}

.diaries-image {
  opacity: 0.7;
  position: absolute;
}

.landing-page-header-title {
  font-weight: 300;
  margin-left: 6%;
  line-height: 60px;
  letter-spacing: 2px;
  font-size: 60px;
  color: #8C8C8C;
  font-family: 'Dancing Script', cursive;
  margin-bottom: -20px;
  z-index: 1;
}

footer {
  position: relative;
  text-align: center;
  width: 100%;
  height: 2rem;
  opacity: 0.4;
  margin-top: auto;
}

footer p {
  color: #8c8c8c;
}

.content {
  width: 100%;
  padding: 85px 6% 40px;
  min-height: calc(100vh - 60px);
}

.add-new-collection-button {
  border: solid 1px #F7A654;
  background: #F7A654;
}

.add-new-diary-button,
.sell-confirm-button,
.listed-banner {
  border: solid 1px #5bc0de;
  background: #5bc0de;
}

.add-new-diary-button,
.sell-confirm-button,
.listed-banner,
.add-new-collection-button {
  display: flex;
  justify-content: center;
  height: 45px;
  color: #F2F2F2;
  margin-bottom: 10px;
  align-items: center;
  text-align: center;
  border-radius: 5px;
  cursor: pointer;
  width: 100%;
  max-width: 300px;
}

.listed-banner {
  border: solid 1px #8C8C8C;
  background: #8C8C8C;
  cursor: none;
  margin: 0;
}

.card-buttons-container {
  display: flex;
  justify-content: end;
  flex-direction: column;
}

.sell-confirm-button {
  font-size: 18px;
  height: 38px;
  margin: 12px 0 0;
}

.buttons-container {
  display: flex;
}

.save-button,
.delete-button,
.save-button-inactive {
  width: 30px;
  height: 30px;
  border-radius: 15px;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: 5px;
}

.save-button {
  border: solid 1px #5bc0de;
  background: #5bc0de;
  color: #F2F2F2;
  cursor: pointer;
}

.delete-button {
  border: solid 1px #8C8C8C;
  color: #8C8C8C;
  cursor: pointer;
}

.delete-button:hover {
  border: solid 1px #DE5B5B;
  color: #DE5B5B;
}

.save-button:hover {
  opacity: 0.5;
}

.save-button-inactive {
  background: #8c8c8c2c;
  border: solid 1px #8c8c8c2c;
  color: #f2f2f2;
  cursor: not-allowed;
  pointer-events: all !important;
}

.material-icons.md-18 {
  font-size: 18px;
}

.add-new-diary {
  display: flex;
  justify-content: center;
  align-items: center;
}

.add-margin {
  margin-right: 5px;
  align-self: end;
}

.add-new-diary-button:hover,
.sell-confirm-button:hover,
.add-new-collection-button:hover {
  opacity: 0.5;
}

.diary-created-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  margin-bottom: 10px;
  color: #8C8C8C;
}

.diary-date {
  font-weight: 700;
  list-style-type: none;
}

.diary {
  background: #f2f2f2;
  border-radius: 7px;
  box-shadow: 0px 2px 20px 0 rgba(0, 0, 0, 0.18);
  width: 70%;
  height: 100%;
  overflow: hidden;
  margin: auto;
}

.diary-controls {
  border-bottom: solid 1px #D9D6D2;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background: #f2f2f2;
  height: 45px;
  width: 100%;
}

.diary-content {
  padding: 10px;
  position: relative;
  overflow: auto;
  scroll-behavior: smooth;
  height: auto;
}

.left-sidebar-item {
  display: flex;
  height: 35px;
  line-height: 35px;
  margin: 5px 0;
  cursor: pointer;
  font-size: 16px;
  text-align: center;
  font-weight: 300;
}

.diary-cover-image {
  position: relative;
  height: 100%;
  object-fit: cover;
  width: 100%;
  cursor: pointer;
}

.left-sidebar-item:hover {
  background: #8c8c8c3e;
}

.left-sidebar-content {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-wrap: break-word;
  width: 100%;
  text-align: initial;
}

.left-sidebar-content-id {
  margin-right: 5px;
}
/* ... */

